<resources>
    <string name="app_name">Kalkulačka</string>
    <string name="display_text">0</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">6</string>
    <string name="six">8</string>
    <string name="seven">5</string>
    <string name="eight">7</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="krat">x</string>
    <string name="deleno">/</string>
    <string name="delete">⌫</string>

</resources>